--- a/src/app/locales/ru.json
+++ b/src/app/locales/ru.json
@@ -37,7 +37,7 @@
     },
     "teasers": {
       "item": {
-        "stories": { "title": "Никаких историй", "info": "Меня ваши истории уже порядком надоели, я не могу их уже смотреть. Одна история лучшие другой, просто" }, 
+        "stories": { "title": "Никаких историй", "info": "Меня ваши истории уже порядком заебали, я не могу их уже смотреть. Одна история охуительней другой, просто" }, 
         "brain": { "title": "Никаких нейросетей", "info": "Мы отдаем предпочтения контенту созданными руками или ногами человека" }, 
         "recommendations": { "title": "Никаких рекомендаций", "info": "Новостная лента содержит только то, на что ты подписался и без рекомендаций добавить бывшую и ее нового парня в друзья" }, 
         "combine": { "title": "Никаких лишних функций", "info": "Ищешь доставку, гороскоп, прогноз погоды, музыку и маркетплейс? Ошибся вкладкой, приятель" },
@@ -344,7 +344,8 @@
       "privacy": "Политика конфиденциальности",
       "legal": "Правовая информация",
       "data-security": "Защита данных",
-      "architecture": "Архитектура приложения"
+      "architecture": "Архитектура приложения",
+      "ai-usage": "Применение искусственного интеллекта"
     },
     "refresh": "Обновить"
   },
@@ -354,6 +355,7 @@
       "comments": "0 ответов | {n} ответ | {n} ответа | {n} ответов",
       "stars": "0 звезд | {n} звезда | {n} звезды | {n} звезд",
       "bookmarks": "0 закладок | {n} закладка | {n} закладки | {n} закладок",
+      "react": "Реакция",
       "edited": "ред",
       "pinned": "Закреплен",
       "hidden_from_feed": "Скрыт из ленты"
@@ -363,11 +365,7 @@
     },
     "pseudo-form": {
       "placeholder-froggy": "Сегодня среда, чувачок...",
-      "placeholder": "Напишите что-нибудь...",
-      "comments-on": "Комментарии включены",
-      "comments-off": "Комментарии выключены",
-      "hidden_from_feed-on": "Будет скрыт из ленты",
-      "hidden_from_feed-off": "Будет показан в ленте"
+      "placeholder": "Напишите что-нибудь..."
     },
     "errors": {
       "empty": "Пусто",
@@ -523,7 +521,10 @@
     "challenge_code_confirmed": "Код подтвержден",
     "challenge_invalide_code": "Код недействителен",
 
-    "invalid_json_format": "Неправильный формат JSON"
+    "invalid_json_format": "Неправильный формат JSON",
+
+    "err_canceled": "Запрос отменен",
+    "err_network": "Ошибка соединения"
   },
   "errors": {
     "todo": {
@@ -590,6 +591,16 @@
       "icon": "cloud-off-line",
       "title": "Плохой запрос",
       "description": "Вероятнее всего, вы что-то сделали не так и сервер вас не понял"
+    },
+    "err_canceled": {
+      "icon": "cloud-off-line",
+      "title": "Запрос отменен",
+      "description": "Вероятнее всего, вы отменили запрос"
+    },
+    "err_network": {
+      "icon": "cloud-off-line",
+      "title": "Ошибка соединения",
+      "description": "Вероятнее всего, сервер недоступен или просто не хочет разговаривать"
     },
     "network_error": {
       "icon": "cloud-off-line",
@@ -675,11 +686,22 @@
   },
   "modals": {
     "compose": {
-      "drafts": "Черновики",
-      "gifs": "Прикрепить GIF",
+      "tab": {
+        "drafts": "Черновики",
+        "gifs": "Прикрепить GIF",
+        "options": "Настройки публикации"
+      },
       "action": {
+        "options": "Настройки публикации",
+        "attach_gifs": "Прикрепить GIF",
         "view_drafts": "Посмотреть черновики",
         "delete_drafts": "Удалить черновики"
+      },
+      "options": {
+        "is_comments_enabled": "Разрешить комментарии",
+        "is_hidden_from_feed": "Скрыть из общей ленты",
+        "is_nsfw": "Содержит непристойный контент",
+        "is_ai": "Содержит сгенерированный контент"
       }
     },
     "search-filter": {
